add put request to set camera uri
